2011-01-29  Carsten Haitzler (The Rasterman)

        1.0.0 release
        
2011-01-29  Brian Mattern

        Fix bug when you have an empty <Name></Name> in a menu

2011-01-30  Carsten Haitzler (The Rasterman)

        Fix tests to not build clearenv related code if not available

2011-01-31  Sebastian Dransfeld

	* Fix memleak, free cache icons after retrival
	* Add temporary memory cache of eet file data
	* Always use icon cache, remove old code
	* Make check for stat return more explicit
	* Check whether dirs is NULL
	* Create internal struct for theme cache
	* Check if theme has changed when building cache
	* Prefix internal efreet cache keys with __
	* Create one cache file for each theme
	* Before doing strcmp, check if pointers are equal. They might be
	  because of mmap and stringshare.
	* Add local icon cache, so we wont hit the cache file for each icon
	  to be retrieved